chore: update license service
